config swagger, remove wire
