# internal/initialize/router.go
@@ -3,8 +3,7 @@ package initialize
 import (
 	"net/http"
 
-	"github.com/devpenguin/go-ecommerce/global"
-	"github.com/devpenguin/go-ecommerce/pkg/response"
+	"github.com/devpenguin/go-ecommerce/internal/controller/syst"
 	"github.com/gin-gonic/gin"
 )
 
@@ -12,10 +11,10 @@ func InitRouter() *gin.Engine {
 	r := gin.Default() //tao 1 instance cua gin (middleware, version, etc ...)
 	//use the middleware
 	// r.Use(AA(), BB(), CC)
-	r.GET("/health-check", Check)
-	v1 := r.Group("/v1/2024")
+	v1 := r.Group("/syst")
 	{
 		v1.GET("/ping", Pong)          // /v1/2024/ping
+		v1.POST("/system-info", syst.SystemAPI.Ping)
 	}
 
 	return r
@@ -52,12 +51,5 @@ func Pong(c *gin.Context) {
 		// "message": "pong...ping" + name,
 		"message": "Hello, " + name,
 		"uid":     uid,
-	})
-}
-
-func Check(c *gin.Context) {
-	response.SuccessResponse(c, http.StatusOK, "Health check", gin.H{
-		"Server Port": global.Config.Server.Port,
-		"Mode": global.Config.Server.Mode,
 	})
 }
