# internal/vo/cms.api.pb.go
@@ -1,0 +1,264 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.28.1
+// 	protoc        v4.25.1
+// source: cms.api.proto
+
+package vo
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type CMSPing struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *CMSPing) Reset() {
+	*x = CMSPing{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_cms_api_proto_msgTypes[0]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CMSPing) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CMSPing) ProtoMessage() {}
+
+func (x *CMSPing) ProtoReflect() protoreflect.Message {
+	mi := &file_cms_api_proto_msgTypes[0]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CMSPing.ProtoReflect.Descriptor instead.
+func (*CMSPing) Descriptor() ([]byte, []int) {
+	return file_cms_api_proto_rawDescGZIP(), []int{0}
+}
+
+type CMSPing_Request struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Hello string `protobuf:"bytes,1,opt,name=hello,proto3" json:"hello,omitempty"` // @gotags: form:"hello"
+}
+
+func (x *CMSPing_Request) Reset() {
+	*x = CMSPing_Request{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_cms_api_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CMSPing_Request) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CMSPing_Request) ProtoMessage() {}
+
+func (x *CMSPing_Request) ProtoReflect() protoreflect.Message {
+	mi := &file_cms_api_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CMSPing_Request.ProtoReflect.Descriptor instead.
+func (*CMSPing_Request) Descriptor() ([]byte, []int) {
+	return file_cms_api_proto_rawDescGZIP(), []int{0, 0}
+}
+
+func (x *CMSPing_Request) GetHello() string {
+	if x != nil {
+		return x.Hello
+	}
+	return ""
+}
+
+type CMSPing_Reply struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Port string `protobuf:"bytes,1,opt,name=port,proto3" json:"port,omitempty"`
+	Mode string `protobuf:"bytes,2,opt,name=mode,proto3" json:"mode,omitempty"`
+}
+
+func (x *CMSPing_Reply) Reset() {
+	*x = CMSPing_Reply{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_cms_api_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *CMSPing_Reply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CMSPing_Reply) ProtoMessage() {}
+
+func (x *CMSPing_Reply) ProtoReflect() protoreflect.Message {
+	mi := &file_cms_api_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CMSPing_Reply.ProtoReflect.Descriptor instead.
+func (*CMSPing_Reply) Descriptor() ([]byte, []int) {
+	return file_cms_api_proto_rawDescGZIP(), []int{0, 1}
+}
+
+func (x *CMSPing_Reply) GetPort() string {
+	if x != nil {
+		return x.Port
+	}
+	return ""
+}
+
+func (x *CMSPing_Reply) GetMode() string {
+	if x != nil {
+		return x.Mode
+	}
+	return ""
+}
+
+var File_cms_api_proto protoreflect.FileDescriptor
+
+var file_cms_api_proto_rawDesc = []byte{
+	0x0a, 0x0d, 0x63, 0x6d, 0x73, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22,
+	0x5b, 0x0a, 0x07, 0x43, 0x4d, 0x53, 0x50, 0x69, 0x6e, 0x67, 0x1a, 0x1f, 0x0a, 0x07, 0x52, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x14, 0x0a, 0x05, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x18, 0x01,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x1a, 0x2f, 0x0a, 0x05, 0x52,
+	0x65, 0x70, 0x6c, 0x79, 0x12, 0x12, 0x0a, 0x04, 0x70, 0x6f, 0x72, 0x74, 0x18, 0x01, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x04, 0x70, 0x6f, 0x72, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x6d, 0x6f, 0x64, 0x65,
+	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6d, 0x6f, 0x64, 0x65, 0x42, 0x0d, 0x5a, 0x0b,
+	0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x76, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x33,
+}
+
+var (
+	file_cms_api_proto_rawDescOnce sync.Once
+	file_cms_api_proto_rawDescData = file_cms_api_proto_rawDesc
+)
+
+func file_cms_api_proto_rawDescGZIP() []byte {
+	file_cms_api_proto_rawDescOnce.Do(func() {
+		file_cms_api_proto_rawDescData = protoimpl.X.CompressGZIP(file_cms_api_proto_rawDescData)
+	})
+	return file_cms_api_proto_rawDescData
+}
+
+var file_cms_api_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_cms_api_proto_goTypes = []interface{}{
+	(*CMSPing)(nil),         // 0: CMSPing
+	(*CMSPing_Request)(nil), // 1: CMSPing.Request
+	(*CMSPing_Reply)(nil),   // 2: CMSPing.Reply
+}
+var file_cms_api_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_cms_api_proto_init() }
+func file_cms_api_proto_init() {
+	if File_cms_api_proto != nil {
+		return
+	}
+	if !protoimpl.UnsafeEnabled {
+		file_cms_api_proto_msgTypes[0].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CMSPing); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_cms_api_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CMSPing_Request); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_cms_api_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*CMSPing_Reply); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: file_cms_api_proto_rawDesc,
+			NumEnums:      0,
+			NumMessages:   3,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_cms_api_proto_goTypes,
+		DependencyIndexes: file_cms_api_proto_depIdxs,
+		MessageInfos:      file_cms_api_proto_msgTypes,
+	}.Build()
+	File_cms_api_proto = out.File
+	file_cms_api_proto_rawDesc = nil
+	file_cms_api_proto_goTypes = nil
+	file_cms_api_proto_depIdxs = nil
+}
